add file delition and get file by id with filtering and sort
